tests/samples/negative/expressions/chained_comparison.ax
module chained_comparison;

fn bad(a: i32, b: i32, c: i32) -> bool {
    return a < b < c;
}

fn main() -> i32 {
    return 0;
}
